--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css"></link>
-    <title>Namaste React</title>
+    <title>Tasty Food</title>
   </head>
   <body>
     <!-- to create html using javascript -->
-    <div id="header">
-      <h1>Hello from outside of React</h1>
-       <div id="root">
-      <h1>Hello plp</h1>
-    </div>
-    <h1>Hello From last of React</h1>
-    </div>
-   
+    <!-- <div > -->
+      <!-- <h1>Hello from outside of React</h1> -->
+       <div id="root"><h1>Akshay is here!</h1></div>
+
+      <!-- <h1>Hello plp</h1> -->
+    <!-- </div> -->
+    <!-- <h1>Hello From last of React</h1> -->
+    <!-- </div> -->
+   <!-- <script>
+    const footer=document.createElement('p')
+    footer.innerHTML='I am footer'
+    const root=document.getElementById('root')
+    root.appendChild(footer)
+   </script> -->
     <!-- <script>
       const heading = document.createElement("h2");
       heading.innerHTML = "Hello World From JS";
@@ -24,14 +30,14 @@
       root.appendChild(heading);
     </script> -->
     <!-- Injecting React code -->
-    <script
+    <!-- <script
       crossorigin
       src="https://unpkg.com/react@18/umd/react.development.js"
     ></script>
     <script
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="App.js"></script>
+    ></script> -->
+    <script type="module" src="App.js"></script>
   </body>
 </html>
