--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css"></link>
-    <title>Tasty Food</title>
+        <title>Tasty Food</title>
   </head>
   <body>
     <!-- to create html using javascript -->
@@ -38,6 +38,6 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script> -->
-    <script type="module" src="App.js"></script>
+    <script type="module" src="./src/components/App.js"></script>
   </body>
 </html>
