routing and menu details

--- a/index.html
+++ b/index.html
@@ -7,37 +7,8 @@
     <link rel="stylesheet" href="index.css"></link>
         <title>Tasty Food</title>
   </head>
-  <body>
-    <!-- to create html using javascript -->
-    <!-- <div > -->
-      <!-- <h1>Hello from outside of React</h1> -->
+  <body> 
        <div id="root"><h1>Akshay is here!</h1></div>
-
-      <!-- <h1>Hello plp</h1> -->
-    <!-- </div> -->
-    <!-- <h1>Hello From last of React</h1> -->
-    <!-- </div> -->
-   <!-- <script>
-    const footer=document.createElement('p')
-    footer.innerHTML='I am footer'
-    const root=document.getElementById('root')
-    root.appendChild(footer)
-   </script> -->
-    <!-- <script>
-      const heading = document.createElement("h2");
-      heading.innerHTML = "Hello World From JS";
-      const root = document.getElementById("root");
-      root.appendChild(heading);
-    </script> -->
-    <!-- Injecting React code -->
-    <!-- <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script> -->
-    <script type="module" src="./src/components/App.js"></script>
+    <script type="module" src="./src/components/App.jsx"></script>
   </body>
 </html>
