--- a/src/basics/index.html
+++ b/src/basics/index.html
@@ -12,6 +12,7 @@
     </div>
     <!-- To create html using javascript -->
     <div>
+      <h1>Hello from outside of React</h1>
       <div id="root">
         <h1>Hello from javascript</h1>
       </div>
