--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body> 
        <div id="root"><h1>Akshay is here!</h1></div>
-    <script type="module" src="./src/components/App.jsx"></script>
+    <script type="module" src="./src/App.jsx"></script>
   </body>
 </html>
