added menu card funtionality

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="icon" href="./src/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css"></link>
-        <title>Tasty Food</title>
+   <link  rel="manifest" href="./src/public/foodOrder.jpg"/>
+        <title>Food Burrow</title></link>
   </head>
   <body> 
-       <div id="root"><h1>Akshay is here!</h1></div>
+       <div id="root"><h1></h1></div>
     <script type="module" src="./src/App.jsx"></script>
   </body>
 </html>
